--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,26 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>L13_ViecLamSinhVien</display-name>
-  <welcome-file-list>
-    <welcome-file>taiKhoan</welcome-file>
-  </welcome-file-list>
-  
-  <servlet>
-  	<servlet-name>SinhVienController</servlet-name>
-  	<servlet-class>controller.SinhVienController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>SinhVienController</servlet-name>
-  	<url-pattern>/sinhVien</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-  	<servlet-name>NganhDaoTaoController</servlet-name>
-  	<servlet-class>controller.NganhDaoTaoController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>NganhDaoTaoController</servlet-name>
-  	<url-pattern>/nganhDaoTao</url-pattern>
-  </servlet-mapping>
-  
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<display-name>L13_ViecLamSinhVien</display-name>
+	<welcome-file-list>
+		<welcome-file>taiKhoan</welcome-file>
+	</welcome-file-list>
+
+
+
 </web-app>
